--- a/config.yml
+++ b/config.yml
@@ -3,12 +3,12 @@ name: demo_server
 error_rate: 0.1
 drop_rate: 0.1
 
-window_size: 1024
-frame_size: 16
+window_size: 16
+frame_size: 1024
 
 nameserver: 127.0.0.1:8089
 
 timeout: 0.05
 
-implementation: select_repeat
-#implementation: go_back
+#implementation: select_repeat
+implementation: go_back
