--- a/config.yml
+++ b/config.yml
@@ -10,5 +10,5 @@ nameserver: 127.0.0.1:8089
 
 timeout: 0.05
 
-#implementation: select_repeat
-implementation: go_back
+implementation: selective_repeat
+#implementation: go_back
